make books section a flex container, and ensure each book is taking up same amount of space. explicitly state flex-wrap

--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,14 @@ h1 {
 .books {
     width: 80%;
     margin: 0 auto;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
 }
 
 .book {
+    flex: 1;
     display: flex;
     flex-direction: column;
     gap: 2px;
